@@ -1,4 +1,4 @@
-<!-- start of $Id: menu_inbox.php,v 1.61 2008/02/17 18:03:37 goddess_skuld Exp $ -->
+<!-- start of $Id: menu_inbox.php,v 1.62 2008/03/06 17:04:13 goddess_skuld Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -46,7 +46,7 @@ switch ($action) {
     </li>
     <?php if ($_SESSION['is_imap']) { ?>
     <?php if ($selected == 3) echo '<li class="selected">'; else echo '<li>'; ?>
-      <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=managefolders"><?php echo convertLang2Html($html_folders); ?></a>
+      <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=managefolders" title="<?php echo convertLang2Html($html_manage_folders_link); ?>"><?php echo convertLang2Html($html_folders); ?></a>
     </li>
     <?php } ?>
     <?php if ($conf->prefs_dir && isset($conf->contact_number_max) && $conf->contact_number_max != 0 ) { ?>
@@ -61,4 +61,4 @@ switch ($action) {
     <?php } ?>
   </ul>
 </div>
-<!-- end of $Id: menu_inbox.php,v 1.61 2008/02/17 18:03:37 goddess_skuld Exp $ -->
+<!-- end of $Id: menu_inbox.php,v 1.62 2008/03/06 17:04:13 goddess_skuld Exp $ -->
