@@ -1,4 +1,4 @@
-<!-- start of $Id: menu_prefs.php,v 1.31 2008/02/17 18:03:37 goddess_skuld Exp $ -->
+<!-- start of $Id: menu_prefs.php,v 1.32 2008/03/06 17:04:13 goddess_skuld Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -13,7 +13,7 @@
     </li>
     <?php if ($_SESSION['is_imap']) { ?>
     <li>
-      <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=managefolders"><?php echo convertLang2Html($html_folders); ?></a>
+      <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=managefolders" title="<?php echo convertLang2Html($html_manage_folders_link); ?>"><?php echo convertLang2Html($html_folders); ?></a>
     </li>
     <?php } ?>
     <?php if ($conf->prefs_dir && isset($conf->contact_number_max) && $conf->contact_number_max != 0 ) { ?>
@@ -21,6 +21,9 @@
       <a href="javascript:void(0);" onclick="window.open('contacts_manager.php?<?php echo session_name() . '=' .   session_id() ?>','','scrollbars=yes,resizable=yes,width=600,height=400')"><?php echo convertLang2Html($html_contacts) ?></a>
     </li>
     <?php } ?>
+    <li class="selected">
+      <span><?php echo convertLang2Html($html_preferences) ?></span>
+    </li>
   </ul>
 </div>
-<!-- end of $Id: menu_prefs.php,v 1.31 2008/02/17 18:03:37 goddess_skuld Exp $ -->
+<!-- end of $Id: menu_prefs.php,v 1.32 2008/03/06 17:04:13 goddess_skuld Exp $ -->
