@@ -21,6 +21,7 @@ NOCC 1.6  ?? ??, ??
     * Patch #1894098 : Use <ul> for main menu (Tim Gerundt).
 
   Misc
+    * Use submenu for IMAP preferences (Tim Gerundt).
     * Use <p class="sendButtons"> instead <TABLE> on more places (Tim Gerundt).
     * Disable incoming message wordwrapping (Arnaud Boudou). 
     * Update some theme images (Tim Gerundt).
